测试HeapDumpOnOutOfMemoryError